# excise

./: .gitignore  pyproject.toml
excise/: cli.py  excision.py  main.py
