[tool.poetry]
name = "excise"
version = "0.1.0"
description = ""
authors = ["Vinicius Miradouro"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipython = "^8.14.0"
pydantic = "^2.0.2"
returns = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
